--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
     <header class="privacy">
       <nav class="navbar navbar-expand-lg py-4">
         <div class="container">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><img src="./images/asset 0.png" class="logo" alt=""
           /></a>
           <button
@@ -47,7 +47,10 @@
           >
             <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
                   >Start</a
                 >
               </li>
@@ -55,13 +58,13 @@
                 <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">privacy</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Technolog</a>
+                <a class="nav-link" href="privacy.html">privacy policy</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link contact-btn" href="#">Contact</a>
+                <a class="nav-link contact-btn" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
