--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">privacy</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="privacy.html">privacy policy</a>
+                <a class="nav-link" href="privacy.html">Privacy Policy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link contact-btn" href="contact.html">Contact</a>
@@ -59,7 +59,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+        </nav>
         <section class="banner-section">
             <div class="container">
                 <div class="benner-content">
