--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
                 <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">privacy</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="privacy.html">privacy policy</a>
+                <a class="nav-link" href="privacy.html">Privacy Policy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link contact-btn" href="contact.html">Contact</a>
