--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- bootsrap css cdn  -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <!-- custom css  -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/contact.css" />
@@ -51,20 +48,25 @@
                   class="nav-link active"
                   aria-current="page"
                   href="/index.html"
-                  >Start</a
+                  >Início</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="/index.html#services">Serviços</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/index.html#about">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="privacy.html">Privacy Policy</a>
+                <a class="nav-link" href="/index.html#technology">Tecnologia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link contact-btn" href="contact.html">Contact</a>
+                <a class="nav-link" href="privacy.html"
+                  >política de Privacidade</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link contact-btn" href="contact.html">Contato</a>
               </li>
             </ul>
           </div>
@@ -75,15 +77,17 @@
       <div class="container">
         <div class="row">
           <div class="contact-banner">
-            <h1>start now</h1>
-            <p>Let's give your business what it needs to grow</p>
+            <h1>Comece já</h1>
+            <p>Vamos dar ao seu negócio o que ele precisa para crescer</p>
           </div>
         </div>
         <div class="row mt-5">
           <div
             class="col-md-4 contact-box d-flex align-items-center border border-dark"
           >
-            <p class="cotact-title">Contact us using the form on the side.</p>
+            <p class="cotact-title">
+              Fale conosco através do formulário ao lado.
+            </p>
           </div>
           <div class="col-md-8 contact-box border border-dark border-start-0">
             <form class="contact-form">
@@ -157,7 +161,11 @@
               </div>
               <div class="row mt-4">
                 <div class="col">
-                  <input type="submit" class="form-control more-btn" />
+                  <input
+                    type="submit"
+                    value="Enviar"
+                    class="form-control more-btn"
+                  />
                 </div>
               </div>
             </form>
@@ -177,16 +185,16 @@
               <!-- Content -->
               <img src="./images/asset 0.png" alt="" />
               <div>
-                <h6 class="text-capitalize fw-bold mb-4">GO unit</h6>
+                <h6 class="text-capitalize fw-bold mb-4">Unidade GO</h6>
                 <p>
-                  (62) 3945-5411 sac@tgfi.com.br Av. dept. Jamel Cecílio, 3,310
-                  Ed. Office Flamboyant, Room 307, Goiânia-GO, CEP: 74.810-100
+                  (62) 3945-5411 sac@tgfi.com.br Av. Dep. Jamel Cecílio, 3.310
+                  Ed. Office Flamboyant, Sala 307, Goiânia-GO, CEP: 74.810-100
                 </p>
               </div>
               <div>
-                <h6 class="text-capitalize fw-bold mb-4">sp unit</h6>
+                <h6 class="text-capitalize fw-bold mb-4">Unidade SP</h6>
                 <p>
-                  (11) 5198-4785 sac@tgfi.com.br Av. Paulista, 1.636, Room
+                  (11) 5198-4785 sac@tgfi.com.br Av. Paulista, 1.636, Sala
                   1.504, Cerqueira César, São Paulo/SP, CEP: 01.310-200
                 </p>
               </div>
@@ -198,19 +206,19 @@
               <!-- Links -->
 
               <p>
-                <a href="#!" class="text-reset">Start</a>
+                <a href="#!" class="text-reset">Início</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Services</a>
+                <a href="#!" class="text-reset">Serviços</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">About</a>
+                <a href="#!" class="text-reset">Sobre</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Technology</a>
+                <a href="#!" class="text-reset">Tecnologia</a>
               </p>
               <p>
-                <a href="#!" class="text-reset more-btn">Contact</a>
+                <a href="#!" class="text-reset more-btn">Contato</a>
               </p>
             </div>
             <!-- Grid column -->
@@ -218,7 +226,7 @@
             <!-- Grid column -->
             <div class="col-lg-6 Newsletter-col col-xl-3 mx-auto mt-5 mb-4">
               <!-- Links -->
-              <h6 class="text-uppercase mb-4">Email Signup For Newsletter</h6>
+              <h6 class="text-uppercase mb-4">Assine nossa newsletter</h6>
               <form action="" class="newsletter-form">
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label"
@@ -232,7 +240,7 @@
                     aria-describedby="emailHelp"
                   />
                 </div>
-                <button type="submit" class="more-btn border-0">Submit</button>
+                <button type="submit" class="more-btn border-0">Enviar</button>
               </form>
             </div>
             <!-- Grid column -->
@@ -240,7 +248,7 @@
             <!-- Grid column -->
             <div class="col-lg-6 col-xl-3 mx-auto mt-5 mb-md-0 mb-4">
               <div class="social-follow">
-                <p>redis socials:</p>
+                <p>Redes sociais:</p>
                 <div class="social-icons">
                   <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
                   <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -266,6 +274,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <!-- bootsrap cdn  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
