--- a/privacy.html
+++ b/privacy.html
@@ -14,10 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- bootsrap css cdn  -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <!-- custom css  -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/privacy.css" />
@@ -51,20 +48,25 @@
                   class="nav-link active"
                   aria-current="page"
                   href="/index.html"
-                  >Start</a
+                  >Início</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="/index.html#services">Serviços</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/index.html#about">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="privacy.html">Privacy Policy</a>
+                <a class="nav-link" href="/index.html#technology">Tecnologia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link contact-btn" href="contact.html">Contact</a>
+                <a class="nav-link" href="privacy.html"
+                  >política de Privacidade</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link contact-btn" href="contact.html">Contato</a>
               </li>
             </ul>
           </div>
@@ -76,53 +78,55 @@
         <div class="row">
           <div class="col-12 text-center">
             <div class="privacy-box pt-5">
-              <h1>Privacy Policy</h1>
+              <h1>Política de Privacidade</h1>
 
               <p class="text-start">
-                tgfi.com respects the confidentiality, integrity and security of
-                your information. There is a severe commitment not to share them
-                with third parties or use them improperly to send E-mail
-                Marketing or SPAM. Communications made by e-mail are intended to
-                keep you informed about the purchase and/or subscription of
-                services. We emphasize that personal data will never be shared
-                or disclosed to third parties, with exception when we are
-                required by law to do so and/or to partners and suppliers (Wix)
-                and sending email marketing. We will only have access to your
-                registration data (name, email), passed on by the Wix platform
-                and, if you want to completely remove your registration from our
-                website, you can request it by email.
+                O tgfi.com respeita o sigilo, a integridade e segurança de suas
+                informações. Há um severo comprometimento em não compartilhá-las
+                com terceiros ou utilizá-las indevidamente para envio de E-mail
+                Marketing ou SPAM. As comunicações realizadas por e-mail tem por
+                objetivo de mantê-lo informado sobre aquisição e/ou inscrição de
+                serviços. Destacamos que dados pessoais jamais serão
+                compartilhados ou divulgados a terceiros, cabendo exceção quando
+                formos obrigados pela lei para fazê-lo e/ou para parceiros e
+                fornecedores (Wix) e envio de e-mail marketing. Teremos acesso
+                apenas aos seus dados cadastrais (nome, e-mail), repassados pela
+                plataforma Wix e, caso queira remover o seu cadastro por
+                completo do nosso site, poderá solicitá-lo pelo e-mail.
               </p>
             </div>
           </div>
           <div class="col-12">
             <div class="privacy-box pt-1">
-              <h1 class="fs-3">Registration Cancellation</h1>
+              <h1 class="fs-3">Políticas de Cookies e Anti-Spam</h1>
 
               <p class="text-start">
-                Cookies are small files sent to your computer. They are a very
-                important tool to follow the user's navigation, making
-                personalization and purchase services easier and faster. Cookies
-                are used to offer differentiated services, remembering who the
-                user is, browsing routines, site frequency and areas of greater
-                access. This data may be collected through partner platforms
-                such as Google Analytics and Wix. And also through partner
-                platforms for registration and means of payment, such as Wix
-                (see platform-specific policy). With your permission, we may
-                send you emails about our events, new services and other updates
-                that may be of interest to you. Therefore, our communications
-                will only occur with your permission, in order to inform you
-                about your acquisition and participation in consulting,
-                mentoring, course or any event. ​
+                Cookies são pequenos arquivos enviados ao seu computador. Eles
+                são uma ferramenta importantíssima para acompanhar a navegação
+                do usuário, tornando mais fáceis e rápidos os serviços de
+                personalização e compras. Os cookies são utilizados para
+                oferecer serviços diferenciados, lembrando quem é o usuário,
+                rotinas de navegação, frequência ao site e áreas de maior
+                acesso. Esses dados poderão ser colhidos por meio de plataformas
+                parceiras, como Google Analytics e Wix. E, ainda, por
+                plataformas parceiras para inscrição e meios de pagamento, como
+                Wix (vide política específica da plataforma). Com sua permissão,
+                podemos lhe enviar e-mails sobre nossos eventos, novos serviços
+                e outras atualizações que possam ser interessante para você.
+                Portanto, nossas comunicações ocorrerão apenas com sua
+                permissão, com o intuito de informá-lo sobre sua aquisição e
+                participação de consultoria, mentoria, curso ou qualquer evento.
               </p>
             </div>
           </div>
           <div class="col-12">
             <div class="privacy-box pt-1">
-              <h1 class="fs-3">Registration Cancellation</h1>
+              <h1 class="fs-3">Cancelamento de Cadastro</h1>
 
               <p class="text-start">
-                The TGFi website is not adept at using spam and declares that it
-                will not send emails to those who have not opted to register at
+                O website TGFi não é adepto a utilização de spam e declara que
+                não enviará e-mails para aqueles que não tenham optado em se
+                cadastrar no site
                 <a href="" class="text-secondary">www.tgfi.com</a> .
               </p>
             </div>
@@ -142,16 +146,16 @@
               <!-- Content -->
               <img src="./images/asset 0.png" alt="" />
               <div>
-                <h6 class="text-capitalize fw-bold mb-4">GO unit</h6>
+                <h6 class="text-capitalize fw-bold mb-4">Unidade GO</h6>
                 <p>
-                  (62) 3945-5411 sac@tgfi.com.br Av. dept. Jamel Cecílio, 3,310
-                  Ed. Office Flamboyant, Room 307, Goiânia-GO, CEP: 74.810-100
+                  (62) 3945-5411 sac@tgfi.com.br Av. Dep. Jamel Cecílio, 3.310
+                  Ed. Office Flamboyant, Sala 307, Goiânia-GO, CEP: 74.810-100
                 </p>
               </div>
               <div>
-                <h6 class="text-capitalize fw-bold mb-4">sp unit</h6>
+                <h6 class="text-capitalize fw-bold mb-4">Unidade SP</h6>
                 <p>
-                  (11) 5198-4785 sac@tgfi.com.br Av. Paulista, 1.636, Room
+                  (11) 5198-4785 sac@tgfi.com.br Av. Paulista, 1.636, Sala
                   1.504, Cerqueira César, São Paulo/SP, CEP: 01.310-200
                 </p>
               </div>
@@ -163,19 +167,19 @@
               <!-- Links -->
 
               <p>
-                <a href="#!" class="text-reset">Start</a>
+                <a href="#!" class="text-reset">Início</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Services</a>
+                <a href="#!" class="text-reset">Serviços</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">About</a>
+                <a href="#!" class="text-reset">Sobre</a>
               </p>
               <p>
-                <a href="#!" class="text-reset">Technology</a>
+                <a href="#!" class="text-reset">Tecnologia</a>
               </p>
               <p>
-                <a href="#!" class="text-reset more-btn">Contact</a>
+                <a href="#!" class="text-reset more-btn">Contato</a>
               </p>
             </div>
             <!-- Grid column -->
@@ -183,7 +187,7 @@
             <!-- Grid column -->
             <div class="col-lg-6 Newsletter-col col-xl-3 mx-auto mt-5 mb-4">
               <!-- Links -->
-              <h6 class="text-uppercase mb-4">Email Signup For Newsletter</h6>
+              <h6 class="text-uppercase mb-4">Assine nossa newsletter</h6>
               <form action="" class="newsletter-form">
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label"
@@ -197,7 +201,7 @@
                     aria-describedby="emailHelp"
                   />
                 </div>
-                <button type="submit" class="more-btn border-0">Submit</button>
+                <button type="submit" class="more-btn border-0">Enviar</button>
               </form>
             </div>
             <!-- Grid column -->
@@ -205,7 +209,7 @@
             <!-- Grid column -->
             <div class="col-lg-6 col-xl-3 mx-auto mt-5 mb-md-0 mb-4">
               <div class="social-follow">
-                <p>redis socials:</p>
+                <p>Redes sociais:</p>
                 <div class="social-icons">
                   <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
                   <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -231,6 +235,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <!-- bootsrap cdn  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
