--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
             <div class="row align-items-center pt-5" >
                 <div class="col-md-6 technology-img" >
                     <div class="text-center" id="about" data-aos="fade-up"
-     data-aos-duration="2000">
+     data-aos-duration="2000"data-aos-delay="50">
                         <h3>Sobre a Tecnologia em Gestão Financeira</h3>
                     </div>
                 </div>
                 <div class="col-md-4 offset-md-1 p-5" data-aos="fade-right"
-     data-aos-duration="2000">
+     data-aos-duration="2000"data-aos-delay="500">
                     <div class="technology-content">
                         <p>Somos especialistas em recuperação de crédito. Contamos com uma equipe que atua há mais de 15 anos no mercado, com clientes em todo o país. <br><br>
 Oferecemos serviços adaptados a diversos segmentos e investimos em tecnologia e na capacitação da equipe para garantir a melhor experiência para o nosso cliente.</p>
