--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,11 @@
                   <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
               </div>
-              <p class="mt-4">Política de Privacidade</p>
+              <p class="mt-4">
+                <a href="privacy.html" class="text-secondary"
+                  >Política de Privacidade</a
+                >
+              </p>
               <a href="" class="text-secondary">© 2023 por Agência Jota</a>
             </div>
             <!-- Grid column -->
