--- a/privacy.html
+++ b/privacy.html
@@ -135,6 +135,7 @@
       </div>
     </section>
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="text-center text-lg-start bg-light text-muted">
       <!-- Section: Links  -->
       <section class="">
@@ -216,7 +217,11 @@
                   <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                 </div>
               </div>
-              <p class="mt-4">Política de Privacidade</p>
+              <p class="mt-4">
+                <a href="privacy.html" class="text-secondary"
+                  >Política de Privacidade</a
+                >
+              </p>
               <a href="" class="text-secondary">© 2023 por Agência Jota</a>
             </div>
             <!-- Grid column -->
