--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
                         <div class="col-md-12 service-box-1">
                             <div class="card service-card">
                                 <div class="card-body">
-                                    <h6 class="card-subtitle mb-2 text-muted"> <svg>
-    <image class="change-my-color" xlink:href="https://svgur.com/i/AFM.svg" width="96" height="96" src="ppngfallback.png" />
-</svg>
+                                    <h6 class="card-subtitle mb-2 text-muted"> <img src="./images/layer.png" alt="">
                                     </h6>
                                     <h5 class="card-title">
                                         Estrutura Tecnológica </h5>
